# AI_02_07

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml  deploy.yml
backend/: .claudeignore  .gitignore  Dockerfile  Dockerfile.worker  create_guide_tables.sql  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/ai_worker/: Dockerfile  main.py
backend/ai_worker/core/: __init__.py  config.py  logger.py  redis_client.py  s3_client.py
backend/ai_worker/tasks/: __init__.py  chat_filter.py  imprint_parser.py  main.py  medical_doc.py  pill_analysis.py
backend/app/: Dockerfile  celery_app.py  main.py
backend/app/apis/: __init__.py  admin_router.py
backend/app/apis/v1/: __init__.py  auth.py  chat.py  common_code.py  guide.py  medical_doc.py  pill_analysis.py  rag.py  s3_test.py  user.py
backend/app/apis/v1/admin/: __init__.py  auth.py  chat_stats.py  dashboard.py  drug_sync.py  errors.py  system.py  users.py
backend/app/core/: config.py  dependencies.py  langfuse_client.py  openai_utils.py  redis.py  redis_client.py  s3.py  security.py
backend/app/db/: databases.py
backend/app/dependencies/: security.py
backend/app/dtos/: admin_dto.py  auth_dto.py  chat_dto.py  common_code_dto.py  common_dto.py  guide_dto.py  user_dto.py
backend/app/models/: __init__.py  admin.py  ai_settings.py  chat.py  common_code.py  guide.py  medical_doc.py  pill_analysis.py  system_error_log.py  user.py  user_allergy.py  user_disease.py  user_lifestyle.py
backend/app/repositories/: chat_repository.py  guide_repository.py  user_repository.py
backend/app/services/: admin_service.py  ai_guide_service.py  alarm_scheduler.py  auth_service.py  chat_service.py  chat_stats_service.py  common_code_service.py  db_init_service.py  error_log_service.py  guide_service.py  jwt.py  kakao_alarm_service.py  kakao_notification.py  medical_doc_service.py  oauth_service.py  public_drug_api.py  rag_service.py  task_queue.py  user_service.py
backend/app/tasks/: reminder_task.py
backend/app/tests/: conftest.py  test_common_code_router.py
backend/app/tests/auth_apis/: test_auth_router.py  test_login_api.py  test_signup_api.py  test_token_api.py
backend/app/tests/guide_apis/: conftest.py  test_guide.py
backend/app/tests/pill_apis/: test_pill_analysis.py  test_pill_v5_1.py
backend/app/tests/user_apis/: test_user_me_apis.py  test_user_router.py
backend/app/utils/jwt/: tokens.py
backend/envs/: example.local.env  example.prod.env
backend/nginx/: Dockerfile  default.conf  local.conf
backend/scripts/: backfill_imprint_metadata.py  certbot.sh  deployment.sh  docker_prune.sh  docker_prune_task.xml  embed_drugs.py  fetch_pill_imprint.py  setup_docker_prune_task.bat  sync_drug_data.py
backend/scripts/ci/: check_mypy.sh  code_fommatting.sh  run_test.sh
backend/scripts/sql/: create_tables.sql  create_tables_patch.sql  seed_common_codes.sql
docs/: CICD_GUIDE.md  DOCKER_SETUP.md  EC2_EMBEDDING_SETUP.md  PILL_ANALYSIS_PROCESS.md  PORTFOLIO.md  RAG_MEDICAL_DOC_GUIDE.md  RAG_SETUP.md  SERVER_SETUP.md  개발 가이드.txt
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(protected)/: layout.tsx
frontend/src/app/(protected)/agreements/: page.tsx
frontend/src/app/(protected)/bookmarks/: page.tsx
frontend/src/app/(protected)/bookmarks/[id]/: page.tsx
frontend/src/app/(protected)/chat/: page.tsx
frontend/src/app/(protected)/docs/: page.tsx
frontend/src/app/(protected)/docs/results/: page.tsx
frontend/src/app/(protected)/docs/results/[id]/: page.tsx
frontend/src/app/(protected)/guide/: page.tsx
frontend/src/app/(protected)/guide/[id]/: page.tsx
frontend/src/app/(protected)/guide/[id]/_components/: TabCaution.tsx  TabDrugDetail.tsx  TabHistory.tsx  TabReminder.tsx  TabToday.tsx
frontend/src/app/(protected)/guide/[id]/edit/: page.tsx
frontend/src/app/(protected)/guide/new/: page.tsx
frontend/src/app/(protected)/health-profile/: page.tsx
frontend/src/app/(protected)/pill/: page.tsx
frontend/src/app/(protected)/pill/[id]/: page.tsx
frontend/src/app/(protected)/profile/: page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/chat-stats/: page.tsx
frontend/src/app/admin/drug-sync/: page.tsx
frontend/src/app/admin/errors/: page.tsx
frontend/src/app/admin/login/: page.tsx
frontend/src/app/admin/system/: page.tsx
frontend/src/app/admin/users/: page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: HeroSection.tsx
frontend/src/components/layout/: UserProfile.tsx  footer.tsx  header.tsx
frontend/src/components/ui/: theme-toggle.tsx
frontend/src/hooks/: use-common-codes.ts
frontend/src/lib/: admin-api.ts  axios.ts  utils.ts
frontend/src/providers/: query-provider.tsx  theme-provider.tsx
frontend/src/store/: admin-store.ts  auth-store.ts  theme-store.ts
