[project]
name = "healthguide"
version = "0.1.0"
description = "AI 기반 헬스케어 상담 웹 서비스"
requires-python = ">=3.11"

dependencies = [
    # ── Web Framework ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    
    # ── Database ──
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # ── Redis ──
    "redis[hiredis]>=5.0.0",
    
    # ── Auth ──
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "httpx>=0.27.0",
    
    # ── AI / LLM ──
    "openai>=1.40.0",
    "sse-starlette>=2.0.0",
    
    # ── Validation & Config ──
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    
    # ── Utilities ──
    "python-multipart>=0.0.9",
    "Pillow>=10.4.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.3.0",
    "vllm>=0.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
